--- a/src/index.html
+++ b/src/index.html
@@ -162,9 +162,7 @@
     <input type="hidden" name="_subject" value="Novo contato via site Kodatec.co">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
-    <input type="hidden" name="_next" value="https://kodatecco.vercel.app/#obrigado">
-    <input type="hidden" name="_to" value="kodatec.co@gmail.com">
-
+    <input type="hidden" name="_next" value="https://kodatec.vercel.app/#obrigado">
 
     <button type="submit" class="btn">Enviar</button>
   </form>
