--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body class="bg-gray-950/90 text-gray-100 antialiased">
-  <header class="bg-gray-900 px-6 py-6 flex items-center justify-between container mx-auto rounded-4xl border border-gray-700 mt-12">
+  <header class="bg-gray-900 px-6 py-6 flex items-center justify-between container mx-auto rounded-4xl border border-gray-700 mt-12 animate-fade-in">
    <a href="#" class="flex items-center gap-3">    
       <span class="logo-wrap" role="img" aria-hidden="false">
         <span class="logo-bg" aria-hidden="true"></span>
@@ -42,7 +42,7 @@
 
   <!-- Mobile nav -->
   <nav id="mobile-nav" class="fixed inset-0 bg-black/40 backdrop-blur-sm hidden z-40 lg:hidden" aria-hidden="true">
-    <div class="mobile-panel w-11/12 max-w-xs h-full p-6">
+    <div class="mobile-panel w-11/12 max-w-xs h-full p-6 animate-fade-in">
       <button id="mobile-close" class="mb-6 btn">Fechar</button>
       <ul class="flex flex-col gap-4">
         <li><a href="#servicos" class="mobile-link block">Serviços</a></li>
@@ -53,8 +53,8 @@
     </div>
   </nav>
 
-  <main class="container mx-auto px-6">
-    <section class="grid gap-8 lg:grid-cols-2 items-center py-20">
+  <main class="container mx-auto px-6 animate-fade-in">
+    <section class="grid gap-8 lg:grid-cols-2 items-center py-20 animate-fade-in">
       <div>
         <h2 class="gradient-text text-4xl lg:text-5xl font-extrabold leading-tight mb-4 text-balance">
           Criamos sites e agentes IA para ampliar seu alcance digital
@@ -70,20 +70,20 @@
           }
         </style>
 
-        <p class="text-gray-300 mb-6">Kodatec constrói presenças digitais profissionais e agentes automatizados para empresas que querem expandir fronteiras.
+        <p class="text-gray-300 mb-6 animate-fade-in">Kodatec constrói presenças digitais profissionais e agentes automatizados para empresas que querem expandir fronteiras.
            <br><span class=" text-orange-500/80">Design, performance e automação com foco em resultados.</span></p>
-        <div class="flex gap-4">
+        <div class="flex gap-4 animate-fade-in">
           <a href="#contato" class="btn">Solicitar Proposta</a>
           <a href="#portfolio" class="px-4 py-2 rounded-md border border-gray-700 hover:bg-gray-800">Ver Portfólio</a>
         </div>
-        <ul class="mt-8 grid gap-3 text-sm text-gray-400">
+        <ul class="mt-8 grid gap-3 text-sm text-gray-400 animate-fade-in">
           <li>• Sites otimizados - performance e SEO</li>
           <li>• Agentes IA para atendimento e automação</li>
           <li>• Estratégias para ampliar alcance digital</li>
         </ul>
       </div>
 
-      <div class="rounded-2xl overflow-hidden relative bg-gradient-to-tr from-gray-800 to-black p-6 sm:p-8">
+      <div class="rounded-2xl overflow-hidden relative bg-gradient-to-tr from-gray-800 to-black p-6 sm:p-8 animate-fade-in">
         <div class="flex justify-center items-center w-full">
           <img id="carousel-img"
                src="./img/note.png"
@@ -91,7 +91,7 @@
                class="w-full h-auto max-w-full sm:max-w-3xl object-contain rounded-xl transition-all duration-700 ease-in-out" />
         </div>
 
-        <div id="carousel-buttons" class="mt-4 flex flex-wrap gap-3 justify-center sm:justify-start">
+        <div id="carousel-buttons" class="mt-4 flex flex-wrap gap-3 justify-center sm:justify-start animate-fade-in">
           <button data-index="0" class="px-3 py-1 rounded-full bg-koda-600 text-black font-semibold text-sm transition-all duration-300">Agentes IA</button>
           <button data-index="1" class="px-3 py-1 rounded-full bg-gray-800 text-gray-300 text-sm transition-all duration-300">Design</button>
           <button data-index="2" class="px-3 py-1 rounded-full bg-gray-800 text-gray-300 text-sm transition-all duration-300">Performance</button>
@@ -99,37 +99,37 @@
       </div>
     </section>
 
-    <section id="servicos" class="py-12">
+    <section id="servicos" class="py-12 animate-fade-in">
       <h3 class="text-2xl font-bold mb-6">Nossos Serviços</h3>
       <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700">
+        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700 animate-fade-in">
           <h4 class="font-semibold mb-2">Desenvolvimento Web</h4>
           <p class="text-sm text-orange-500/80">Sites rápidos, responsivos e otimizados para conversão.</p>
         </article>
-        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700">
+        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700 animate-fade-in">
           <h4 class="font-semibold mb-2">Agentes IA</h4>
           <p class="text-sm text-orange-500/80">Chatbots e agentes para automação de vendas e atendimento.</p>
         </article>
-        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700">
+        <article class="p-6 rounded-xl bg-gray-800 border border-gray-700 animate-fade-in">
           <h4 class="font-semibold mb-2">Marketing Digital</h4>
           <p class="text-sm text-orange-500/80">Estratégias para amplificar alcance e performance.</p>
         </article>
       </div>
     </section>
 
-    <section id="agentes" class="py-12">
+    <section id="agentes" class="py-12 animate-fade-in">
       <h3 class="text-2xl font-bold mb-6">Agentes Inteligentes</h3>
       <p class="underline underline-offset-4 decoration-orange-500 underline-2 mb-6">Automatize tarefas repetitivas, otimize atendimento e gere leads com agentes IA integrados ao seu site.</p>
       <div class="grid gap-6 sm:grid-cols-2">
-        <div class="p-6 rounded-xl bg-gray-800 border border-gray-700">Agentes Whatsapp atuando 24h / 7dias</div>
-        <div class="p-6 rounded-xl bg-gray-800 border border-gray-700">Fluxos de Conversa Personalizados baseados nos dados de sua empresa</div>
+        <div class="p-6 rounded-xl bg-gray-800 border border-gray-700 animate-fade-in">Agentes Whatsapp atuando 24h / 7dias</div>
+        <div class="p-6 rounded-xl bg-gray-800 border border-gray-700 animate-fade-in">Fluxos de Conversa Personalizados baseados nos dados de sua empresa</div>
       </div>
     </section>
 
-<section id="portfolio" class="py-12">
+<section id="portfolio" class="py-12 animate-fade-in">
   <h3 class="text-2xl font-bold mb-6">Portfólio</h3>
   <div class="grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
-    <div class="rounded-xl overflow-hidden bg-gray-800 flex flex-col">
+    <div class="rounded-xl overflow-hidden bg-gray-800 flex flex-col animate-fade-in">
       <div class="bg-green-950/80 flex justify-center items-center">
         <img class="h-auto" src="./img/forest.png" alt="projeto" class="w-full h-auto max-h-80 object-contain rounded-t-xl" />
       </div>
@@ -139,7 +139,7 @@
       </div>
     </div>
 
-    <div class="rounded-xl overflow-hidden bg-gray-800 flex flex-col">
+    <div class="rounded-xl overflow-hidden bg-gray-800 flex flex-col animate-fade-in">
       <div class="bg-black/80 flex justify-center items-center">
         <img class="h-auto" src="./img/portfolio2.png" alt="projeto" class="w-full h-auto max-h-80 object-contain rounded-t-xl" />
       </div>
@@ -151,10 +151,10 @@
   </div>
 </section>
 
-<section id="contato" class="py-12">
+<section id="contato" class="py-12 animate-fade-in">
   <h3 class="text-2xl font-bold mb-6">Fale Conosco</h3>
 
-  <form id="contact-form" action="https://formsubmit.co/bd071483c02059d61842e6eb0e898d03" method="POST" class="grid gap-4 max-w-2xl">
+  <form id="contact-form" action="https://formsubmit.co/bd071483c02059d61842e6eb0e898d03" method="POST" class="grid gap-4 max-w-2xl animate-fade-in">
     <input type="text" name="nome" placeholder="Seu nome" required class="input">
     <input type="email" name="email" placeholder="Seu e-mail" required class="input">
     <textarea name="mensagem" placeholder="Mensagem" rows="4" required class="input"></textarea>
@@ -168,7 +168,7 @@
   </form>
 
   <!-- Modal -->
-  <div id="thankyou-modal" class="fixed inset-0 hidden items-center justify-center bg-black/60 backdrop-blur-md z-50">
+  <div id="thankyou-modal" class="fixed inset-0 hidden items-center justify-center bg-black/60 backdrop-blur-md z-50 animate-fade-in">
     <div class="bg-gray-950/90 border border-gray-700 p-8 rounded-2xl text-center max-w-md mx-4 shadow-xl animate-fade-in">
       <div class="flex justify-center mb-4">
         <img src="./img/gmail-icon.svg" alt="Gmail ícone" class="w-10 h-10 opacity-90">
@@ -182,7 +182,7 @@
 
   </main>
 
-  <footer class="py-8 mt-12 border-t border-gray-800">
+  <footer class="py-8 mt-12 border-t border-gray-800 animate-fade-in">
     <div class="container mx-auto px-6 text-sm text-gray-400 flex flex-col lg:flex-row justify-between">
       <div>© 2025 Kodatec.co — Todos os direitos reservados</div>
       <div class="flex gap-4 mt-4 lg:mt-0">
@@ -190,6 +190,7 @@
       </div>
     </div>
   </footer>
+
 
 <script>
 /* === FORMULÁRIO DE CONTATO === */
@@ -318,6 +319,20 @@ mobileLinks.forEach(link => {
     }, 100); // 100ms funciona bem; ajuste se tiver animações maiores
   });
 });
+
+/* === REVEAL ON SCROLL === */
+const revealElements = document.querySelectorAll('.reveal');
+
+const observer = new IntersectionObserver((entries) => {
+  entries.forEach((entry) => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add('show');
+      observer.unobserve(entry.target);
+    }
+  });
+}, { threshold: 0.1 });
+
+revealElements.forEach((el) => observer.observe(el));
 </script>
 
 
